--- a/QuotesMgt.Contracts/QuotesMgt.Contracts.csproj
+++ b/QuotesMgt.Contracts/QuotesMgt.Contracts.csproj
@@ -6,7 +6,7 @@
 
   <ItemGroup>
     <Reference Include="System.ComponentModel.Annotations">
-      <HintPath>..\..\..\..\..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.netcore.app\2.2.0\ref\netcoreapp2.2\System.ComponentModel.Annotations.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.netcore.app\2.2.0\ref\netcoreapp2.2\System.ComponentModel.Annotations.dll</HintPath>
     </Reference>
   </ItemGroup>
 
