Added migration. Added connectionstring. Added IOC

--- a/QuotesMgt.Api/appsettings.json
+++ b/QuotesMgt.Api/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "QuoteDB": "Data Source=(localdb)\\ProjectsV13;Initial Catalog=QuotesDB;Integrated Security=True;Connect Timeout=30;"
+  }
 }
