--- a/QuotesMgt.Api/QuotesMgt.Api.csproj
+++ b/QuotesMgt.Api/QuotesMgt.Api.csproj
@@ -15,4 +15,8 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\QuotesMgt.Data\QuotesMgt.Data.csproj" />
+  </ItemGroup>
+
 </Project>
